Fix al titles and alignment

--- a/src/galeria.css
+++ b/src/galeria.css
@@ -22,15 +22,24 @@ body::before {
 }
 
 #galeria {
-  padding: var(--spacing-xl) 0;
-  max-width: var(--max-width);
-  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+  padding-top: var(--spacing-md);
 }
 
 #galeria h2 {
-  text-align: center;
   margin-bottom: var(--spacing-md);
+  max-width: 20ch;
   position: relative;
+  display: inline-block;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  color: var(--text);
+  font-size: clamp(2rem, 5vw, 3.0rem);
+  font-weight: 600;
+
 }
 
 #galeria h2::after {
@@ -42,6 +51,10 @@ body::before {
   width: 60px;
   height: 3px;
   background-color: var(--primary);
+  font-size: clamp(2rem, 5vw, 3.0rem);
+  font-weight: 600;
+
+
 }
 
 #galeria p {
